# bloomberg-a2a

./: README.md  pyproject.toml
scripts/: ollama_test.py
src/bloomberg_a2a/: __init__.py  blp_a2a_agent.py  blp_a2a_server.py  blp_a2a_task_manager.py
src/blpapi_a2a/: __init__.py  blp_a2a_server.py  blp_a2a_task_manager.py
